2009-12-23  Pavel Feldman  <pfeldman@chromium.org>

Reviewed by Timothy Hatcher.

        Web Inspector: Console dumps strings in escaped form.

        https://bugs.webkit.org/show_bug.cgi?id=32488

        * inspector/front-end/ConsoleView.js:
        (WebInspector.ConsoleMessage.prototype._formatIndividualValue):
        * inspector/console-format-expected.txt:


Canonical link: https://commits.webkit.org/43957@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@52544 268f45cc-cd09-0410-ab3c-d52691b4dbfc